@@ -889,8 +889,13 @@ interactive_loop(int fd_in, int fd_out, char *file1, char *file2)
 			return;
 		}
 	}
+#if HAVE_SETVBUF
 	setvbuf(stdout, NULL, _IOLBF, 0);
 	setvbuf(infile, NULL, _IOLBF, 0);
+#else
+	setlinebuf(stdout);
+	setlinebuf(infile);
+#endif
 
 	for(;;) {
 		char *cp;
